--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>插件功能：用户可任意旋转放缩拖曳图片对图片进行裁剪再异步上传图片，实时显示上传状态。</p>
 
 <h4>
-<a id="在线demo" class="anchor" href="#%E5%9C%A8%E7%BA%BFdemo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://vytao.github.io/cimg/">在线demo</a>
+<a id="在线demo" class="anchor" href="#%E5%9C%A8%E7%BA%BFdemo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://vytao.github.io/cimg/index.html">在线demo</a>
 </h4>
       </section>
     </div>
