--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta content="width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0" name="viewport">
-<title>示例</title>
+<title>DEMO</title>
 <link rel="stylesheet" href="css/CI.css">
 <style>
 	html {
@@ -123,8 +123,8 @@
 	<button class="clip">剪切</button>
 	<button class="upload">上传</button>
 	<img src="" alt="" class="prev">
-	<script src="js/zepto.min.js"></script>
-	<script src="js/hammer.min.js"></script>
+	<script src="https:////libs.cdnjs.net/zepto/1.2.0/zepto.min.js"></script>
+	<script src="https://libs.cdnjs.net/hammer.js/2.0.8/hammer.min.js"></script>
 	<script src="js/newCI.js"></script>
 
 	<script>
