--- a/demo/index.html
+++ b/demo/index.html
@@ -123,8 +123,8 @@
 	<button class="clip">剪切</button>
 	<button class="upload">上传</button>
 	<img src="" alt="" class="prev">
-	<script src="http://cdn.staticfile.org/jquery/2.2.1/jquery.min.js"></script>
-	<script src="http://cdn.staticfile.org/hammer.js/2.0.4/hammer.min.js"></script>
+	<script src="https://cdn.staticfile.org/jquery/2.2.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/hammer.js/2.0.4/hammer.min.js"></script>
 	<script src="js/newCI.js"></script>
 
 	<script>
